# hdfs-client-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  package.sh  run.sh
.github/workflows/: package-and-release.yml
include/: config_loader.h  hdfs_builder.h  hdfs_client.h
src/: config_loader.cpp  hdfs_builder.cpp  hdfs_client.cpp  main.cpp
